# internal/model/bookedslot.go
@@ -1,6 +1,0 @@
-package model
-
-type BookedSlot struct {
-	StartTime string `db:"start_time" json:"start_time"`
-	EndTime   string `db:"end_time" json:"end_time"`
-}
